# DynamicalForecasts

./: .gitignore  Readme.md
AWS Deployment/: README.md
AWS Deployment/scripts/: local_zarr_test_download.py  s3_read_test_data.py  s3_upload_test_data.py  visualize_test_results.py
AWS Deployment/test_output/local_zarr/: Q01_gefs.json  Q02_ecmwf_ifs_ens.json  Q03_gefs.json  Q04_ecmwf_ifs_ens.json  Q05_gefs.json  Q06_ecmwf_ifs_ens.json  Q07_gefs.json  Q08_ecmwf_ifs_ens.json  Q09_gefs.json  Q10_ecmwf_ifs_ens.json  summary.json
examples/: README.md  connection_diagnostics.py  ecmwf-ifs-ens-forecast-15-day-0-25-degree-icechunk.ipynb  ecmwf-ifs-ens-forecast-15-day-0-25-degree.ipynb  noaa-gefs-forecast-35-day-icechunk.ipynb  noaa-gefs-forecast-35-day.ipynb  noaa-stations+gefs.ipynb  pyproject.toml
examples/.internal/: create_icechunk_versions.py
shiny-dashboard/: README.md  app.R
shiny-dashboard/config/: request_limits.json  source_registry.json
shiny-dashboard/data/benchmarks/: zarr_query_benchmark_results.csv  zarr_query_benchmark_summary.md
shiny-dashboard/scripts/: benchmark_zarr_queries.py
test scripts/: README.md  simple_precip_timeseries_raster.R
